--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@marsidev/react-turnstile": "^0.4.0",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
