--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@marsidev/react-turnstile": "^0.4.0",
+    "lucide-react": "^0.513.0",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
